[gd_scene load_steps=8 format=3 uid="uid://m4e2ap3r625r"]

[ext_resource type="Script" uid="uid://bf0q2t4cxv6gm" path="res://pentagram_portal.gd" id="1_keddc"]
[ext_resource type="Texture2D" uid="uid://dcuu5d3kp6b6m" path="res://resources/assets/portal_eye.png" id="2_boy5k"]
[ext_resource type="Texture2D" uid="uid://bnnr57uqbbd3t" path="res://resources/assets/pentagram_portal.png" id="3_yd2kr"]
[ext_resource type="Texture2D" uid="uid://bef41856y12sp" path="res://resources/assets/candle_fire.png" id="4_dr67s"]

[sub_resource type="CircleShape2D" id="CircleShape2D_nnolq"]
radius = 11.0454

[sub_resource type="RectangleShape2D" id="RectangleShape2D_upmer"]
size = Vector2(3, 6)

[sub_resource type="CircleShape2D" id="CircleShape2D_fgx4u"]
radius = 3.0

[node name="CharacterBody2D" type="CharacterBody2D"]
position = Vector2(10, 3)
script = ExtResource("1_keddc")

[node name="eye" type="Sprite2D" parent="."]
position = Vector2(-4, -2)
texture = ExtResource("2_boy5k")

[node name="Portal" type="Sprite2D" parent="."]
position = Vector2(-5, -3)
texture = ExtResource("3_yd2kr")

[node name="teleportzone" type="Area2D" parent="."]

[node name="CollisonShape2D" type="CollisionShape2D" parent="teleportzone"]
position = Vector2(-9, -4)
shape = SubResource("CircleShape2D_nnolq")

[node name="candle_2" type="CollisionShape2D" parent="."]
position = Vector2(-59.5, -78)
shape = SubResource("RectangleShape2D_upmer")

[node name="candle_1" type="CollisionShape2D" parent="."]
position = Vector2(43.5, -80)
shape = SubResource("RectangleShape2D_upmer")

[node name="candle_3" type="CollisionShape2D" parent="."]
position = Vector2(-96.5, 23)
shape = SubResource("RectangleShape2D_upmer")

[node name="candle_4" type="CollisionShape2D" parent="."]
position = Vector2(78.5, 22.5)
shape = SubResource("RectangleShape2D_upmer")

[node name="candle_5" type="CollisionShape2D" parent="."]
position = Vector2(-8.5, 88)
shape = SubResource("RectangleShape2D_upmer")

[node name="flame_1" type="Sprite2D" parent="."]
position = Vector2(43, -85)
texture = ExtResource("4_dr67s")

[node name="firezone_1" type="Area2D" parent="."]
collision_layer = 5
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="firezone_1"]
position = Vector2(43, -83)
shape = SubResource("CircleShape2D_fgx4u")

[node name="flame_2" type="Sprite2D" parent="."]
position = Vector2(-60, -80)
texture = ExtResource("4_dr67s")

[node name="firezone_2" type="Area2D" parent="."]
position = Vector2(-59, -78)
collision_layer = 5
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="firezone_2"]
position = Vector2(-1, -1)
shape = SubResource("CircleShape2D_fgx4u")

[node name="flame_3" type="Sprite2D" parent="."]
position = Vector2(-97, 18)
texture = ExtResource("4_dr67s")

[node name="firezone_3" type="Area2D" parent="."]
position = Vector2(-96, 23)
collision_layer = 5
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="firezone_3"]
position = Vector2(-1, -4)
shape = SubResource("CircleShape2D_fgx4u")

[node name="flame_4" type="Sprite2D" parent="."]
position = Vector2(-8, 83)
texture = ExtResource("4_dr67s")

[node name="firezone_4" type="Area2D" parent="."]
position = Vector2(-9, 88)
collision_layer = 5
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="firezone_4"]
position = Vector2(1, -4)
shape = SubResource("CircleShape2D_fgx4u")

[node name="flame_5" type="Sprite2D" parent="."]
position = Vector2(78, 18)
texture = ExtResource("4_dr67s")

[node name="firezone_5" type="Area2D" parent="."]
position = Vector2(79, 20)
collision_layer = 5
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="firezone_5"]
position = Vector2(0, -1)
shape = SubResource("CircleShape2D_fgx4u")

[connection signal="body_entered" from="teleportzone" to="." method="_on_teleportzone_body_entered"]
[connection signal="body_entered" from="firezone_1" to="." method="_on_firezone_1_body_entered"]
[connection signal="body_entered" from="firezone_2" to="." method="_on_firezone_2_body_entered"]
[connection signal="body_entered" from="firezone_3" to="." method="_on_firezone_3_body_entered"]
[connection signal="body_entered" from="firezone_4" to="." method="_on_firezone_4_body_entered"]
[connection signal="body_entered" from="firezone_5" to="." method="_on_firezone_5_body_entered"]
